--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm run open && next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "open": "open http://localhost:3000"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.2",
-    "@types/node": "^17.0.42",
-    "@types/react": "^18.0.12",
-    "@types/react-dom": "^18.0.5",
+    "@reduxjs/toolkit": "^1.8.3",
+    "@types/node": "^18.0.6",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
-    "@types/react-transition-group": "^4.4.4",
+    "@types/react-transition-group": "^4.4.5",
     "@types/smoothscroll-polyfill": "^0.3.1",
     "@types/sortablejs": "^1.13.0",
     "array-move": "^4.0.0",
-    "firebase": "^9.8.3",
-    "next": "^12.1.6",
-    "rc-slider": "^10.0.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "firebase": "^9.9.0",
+    "next": "^12.2.2",
+    "rc-slider": "^10.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-sortablejs": "^6.1.4",
     "react-transition-group": "^4.4.2",
-    "react-youtube": "^9.0.2",
+    "react-youtube": "^9.0.3",
     "redux-persist": "^6.0.0",
     "smoothscroll-polyfill": "^0.4.4",
     "sortablejs": "^1.15.0",
-    "tailwindcss": "^3.1.2"
+    "tailwindcss": "^3.1.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
-    "sass": "^1.52.3",
-    "typescript": "^4.7.3"
+    "sass": "^1.53.0",
+    "typescript": "^4.7.4"
   }
 }
